--- a/css/style.css
+++ b/css/style.css
@@ -26,17 +26,49 @@ body {
   box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
   width: 1440px;
-  height: 2000px;
-  margin: 30px auto; }
+  height: 100vh;
+  margin: 0 auto; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    body {
+      width: 768px; } }
+
+.hero-section {
+  z-index: -1;
+  width: 991.63px;
+  height: 936.92px;
+  position: absolute;
+  background-image: url(/assets/image-hero-desktop.webp);
+  top: -170px;
+  left: 769px; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .hero-section {
+      z-index: -1;
+      background-image: url(/assets/image-hero-tablet.webp);
+      width: 720px;
+      height: 720px;
+      left: 380px;
+      top: -92.13px; } }
+
+.hero {
+  width: 990px;
+  height: 960px; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .hero {
+      width: 640.71px;
+      height: 640px; } }
 
 .container {
-  margin: 0 auto;
+  margin: 30px auto;
   width: 1110px;
-  height: 1800px;
+  height: 1440px;
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3, 1fr) 200px;
   grid-template-rows: 100px 600px 800px 100px; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 100px 500px 800px 100px; } }
   .container > * {
     font-size: 30px;
     font-weight: 700;
@@ -50,6 +82,11 @@ body {
     width: 112px;
     height: 28px;
     margin-top: 39px; }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .header .logo {
+        width: 89px;
+        height: 35px;
+        margin-top: 0; } }
   .header .btn--get-started:visited,
   .header .btn--get-started:link {
     position: absolute;
@@ -68,18 +105,34 @@ body {
     font-size: 18px;
     color: #FFF;
     transition: all .2s; }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .header .btn--get-started:visited,
+      .header .btn--get-started:link {
+        width: 140px;
+        height: 48px;
+        font-size: 16px;
+        top: 24px;
+        left: 588px; } }
   .header .btn--get-started:hover {
     background-color: var(--color-primary-grey-2); }
 
 .informations {
   grid-column: 1 / 3;
   margin-top: 166px; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .informations {
+      transform: translateY(-145px); } }
   .informations__title {
     width: 457px;
     height: 143px;
     margin-bottom: 20px;
     font-size: 56px;
     color: var(--color-primary-dark-blue); }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .informations__title {
+        width: 326px;
+        height: 101px;
+        font-size: 40px; } }
   .informations__details {
     width: 445px;
     height: 84px;
@@ -87,6 +140,13 @@ body {
     font-size: 18px;
     font-weight: 500;
     color: var(--color-primary-grey-2); }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .informations__details {
+        width: 398px;
+        height: 78px;
+        font-size: 16px;
+        line-height: 26px;
+        margin-bottom: 24px; } }
   .informations__button:visited, .informations__button:link {
     display: flex;
     align-items: center;
@@ -101,20 +161,11 @@ body {
     font-size: 18px;
     color: #FFF;
     transition: all .2s; }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .informations__button:visited, .informations__button:link {
+        height: 56px; } }
   .informations__button:hover {
     box-shadow: inset 0 0 0 1000px rgba(255, 252, 252, 0.4); }
-
-.hero-section {
-  z-index: -1;
-  width: 990px;
-  height: 960px;
-  position: absolute;
-  top: -170px;
-  left: 769px; }
-
-.hero {
-  width: 990px;
-  height: 960px; }
 
 .specifications {
   grid-column: 1 / -1;
@@ -124,9 +175,20 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 60px;
   grid-column-gap: 30px; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .specifications {
+      margin-top: 20px;
+      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: repeat(2, 340px);
+      grid-row-gap: 60px;
+      grid-column-gap: 10px; } }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .specifications > * {
+      width: 339px;
+      height: 259px; } }
   .specifications__highlights {
     background: linear-gradient(#ff6f48, #f02aa6);
-    border-radius: 25px;
+    border-radius: 10px;
     grid-area: 1, 1 / 2, 2; }
     .specifications__highlights--text {
       display: flex;
@@ -135,26 +197,41 @@ body {
       color: #FFF;
       margin-left: 32px;
       margin-top: 64px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__highlights--text {
+          font-size: 24px;
+          width: 286px;
+          height: 64px; } }
   .specifications__animation {
-    grid-area: 1, 2 / 2, 3;
+    grid-area: 1, 2 / 2, -1;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border-radius: 25px;
     padding: 64px 32px 40px 32px;
     box-shadow: 0px 25px 50px 0px rgba(6, 22, 141, 0.042); }
     .specifications__animation--title {
       font-size: 24px;
       color: var(--color-primary-dark-blue); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__animation--title {
+          font-size: 20px;
+          margin-top: 24px; } }
     .specifications__animation--text {
       font-size: 18px;
       font-weight: 200;
       color: var(--color-primary-grey-2);
       line-height: 28px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__animation--text {
+          font-size: 16px;
+          margin-top: 16px; } }
     .specifications__animation--link:link, .specifications__animation--link:visited {
       text-decoration: none;
       color: var(--color-primary-pink-1);
       font-size: 18px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__animation--link:link, .specifications__animation--link:visited {
+          margin-top: 24px; } }
     .specifications__animation::before {
       content: "";
       margin-top: -105px;
@@ -171,24 +248,41 @@ body {
     border-radius: 25px;
     padding: 64px 32px 40px 32px;
     box-shadow: 0px 25px 50px 0px rgba(6, 22, 141, 0.042); }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .specifications__design {
+        font-size: 20px;
+        margin-top: 24px; } }
     .specifications__design--title {
       margin-top: -25px;
       font-size: 24px;
       color: var(--color-primary-dark-blue); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__design--title {
+          font-size: 20px;
+          margin-top: 24px; } }
     .specifications__design--text {
       font-size: 18px;
       transform: translateY(-20px);
       font-weight: 200;
       color: var(--color-primary-grey-2);
       line-height: 28px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__design--text {
+          transform: translate(0);
+          font-size: 16px;
+          margin-top: 16px; } }
     .specifications__design--link:link, .specifications__design--link:visited {
       text-decoration: none;
       color: var(--color-primary-pink-1);
       font-size: 18px;
       transform: translateY(-18px); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__design--link:link, .specifications__design--link:visited {
+          transform: translateY(0);
+          margin-top: 24px; } }
     .specifications__design::before {
       content: "";
-      margin-top: -90px;
+      margin-top: -95px;
       width: 56px;
       height: 56px;
       border: 50%;
@@ -200,27 +294,46 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-radius: 25px;
     padding: 64px 32px 40px 32px;
     box-shadow: 0px 25px 50px 0px rgba(6, 22, 141, 0.042); }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .specifications__photography {
+        font-size: 20px;
+        margin-top: 24px;
+        grid-row: 2 / 3;
+        grid-column: 2 / -1; } }
     .specifications__photography--title {
       margin-top: -25px;
       font-size: 24px;
       color: var(--color-primary-dark-blue); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__photography--title {
+          margin-top: 0;
+          font-size: 20px;
+          margin-top: 24px; } }
     .specifications__photography--text {
       font-size: 18px;
       transform: translateY(-34px);
       font-weight: 200;
       color: var(--color-primary-grey-2);
       line-height: 28px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__photography--text {
+          transform: translate(0);
+          font-size: 16px;
+          margin-top: 16px; } }
     .specifications__photography--link:link, .specifications__photography--link:visited {
       text-decoration: none;
       color: var(--color-primary-pink-1);
       font-size: 18px;
       transform: translateY(-18px); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__photography--link:link, .specifications__photography--link:visited {
+          transform: translateY(0);
+          margin-top: 24px; } }
     .specifications__photography::before {
       content: "";
-      margin-top: -90px;
+      margin-top: -95px;
       width: 56px;
       height: 56px;
       border: 50%;
@@ -235,24 +348,44 @@ body {
     border-radius: 25px;
     padding: 64px 32px 40px 32px;
     box-shadow: 0px 25px 50px 0px rgba(6, 22, 141, 0.042); }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .specifications__crypto {
+        font-size: 20px;
+        margin-top: 24px;
+        grid-row: 3 / 4;
+        grid-column: 1 / 2; } }
     .specifications__crypto--title {
       margin-top: -25px;
       font-size: 24px;
       color: var(--color-primary-dark-blue); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__crypto--title {
+          margin-top: 0;
+          font-size: 20px;
+          margin-top: 24px; } }
     .specifications__crypto--text {
       font-size: 18px;
       transform: translateY(-20px);
       font-weight: 200;
       color: var(--color-primary-grey-2);
       line-height: 28px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__crypto--text {
+          transform: translate(0);
+          font-size: 16px;
+          margin-top: 16px; } }
     .specifications__crypto--link:link, .specifications__crypto--link:visited {
       text-decoration: none;
       color: var(--color-primary-pink-1);
       font-size: 18px;
       transform: translateY(-18px); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__crypto--link:link, .specifications__crypto--link:visited {
+          transform: translateY(0);
+          margin-top: 24px; } }
     .specifications__crypto::before {
       content: "";
-      margin-top: -90px;
+      margin-top: -95px;
       width: 56px;
       height: 56px;
       border: 50%;
@@ -267,24 +400,44 @@ body {
     border-radius: 25px;
     padding: 64px 32px 40px 32px;
     box-shadow: 0px 25px 50px 0px rgba(6, 22, 141, 0.042); }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .specifications__business {
+        font-size: 20px;
+        margin-top: 24px;
+        grid-row: 3 / 4;
+        grid-column: 2 / -1; } }
     .specifications__business--title {
       margin-top: -25px;
       font-size: 24px;
       color: var(--color-primary-dark-blue); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__business--title {
+          margin-top: 0;
+          font-size: 20px;
+          margin-top: 24px; } }
     .specifications__business--text {
       font-size: 18px;
       transform: translateY(-20px);
       font-weight: 200;
       color: var(--color-primary-grey-2);
       line-height: 28px; }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__business--text {
+          transform: translate(0);
+          font-size: 16px;
+          margin-top: 16px; } }
     .specifications__business--link:link, .specifications__business--link:visited {
       text-decoration: none;
       color: var(--color-primary-pink-1);
       font-size: 18px;
       transform: translateY(-18px); }
+      @media (min-width: 768px) and (max-width: 1440px) {
+        .specifications__business--link:link, .specifications__business--link:visited {
+          transform: translateY(0);
+          margin-top: 24px; } }
     .specifications__business::before {
       content: "";
-      margin-top: -90px;
+      margin-top: -95px;
       width: 56px;
       height: 56px;
       border: 50%;
@@ -298,6 +451,11 @@ body {
   width: 1440px;
   height: 120px;
   background-color: #13183F; }
+  @media (min-width: 768px) and (max-width: 1440px) {
+    .footer {
+      width: 768px;
+      margin-top: 250px;
+      justify-content: flex-between; } }
   .footer .btn--get-started:visited,
   .footer .btn--get-started:link {
     display: flex;
@@ -312,10 +470,20 @@ body {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-size: 18px;
     color: #FFF; }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .footer .btn--get-started:visited,
+      .footer .btn--get-started:link {
+        width: 140px;
+        height: 48px;
+        margin: 36px 39px 36px 0; } }
   .footer .btn--get-started:hover {
     box-shadow: inset 0 0 0 1000px rgba(255, 252, 252, 0.4); }
   .footer img {
-    display: block;
     width: 112px;
     height: 28px;
     margin: 47px 0 46px 166px; }
+    @media (min-width: 768px) and (max-width: 1440px) {
+      .footer img {
+        width: 89px;
+        height: 35px;
+        margin: 43px 0 42px 40px; } }
