--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,12 @@
     --color-primary-pink-2 : #FFA7C3;
 }
 
+$bp-desktop : 1440px;
+$bp-tablet : 768px;
+$bp-mobile : 375px;
+
+
+
 * {
     margin: 0;
     padding: 0; }
@@ -28,40 +34,84 @@ body {
     background-color: #FFF;
     box-sizing: border-box;
     font-family: "Plus Jakarta Sans", sans-serif;
-    width: 1440px;
-    height: 2000px;
-    margin: 30px auto;
+    width: $bp-desktop;
+    height: 100vh;
+    margin: 0 auto;
 
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+        width: $bp-tablet;
+    }
 }
+
+.hero-section {
+    z-index: -1;
+    width: 991.63px;
+    height: 936.92px;
+    position: absolute;
+    background-image: url(/assets/image-hero-desktop.webp);
+    top: -170px;
+    left: 769px;
+  
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+        z-index: -1;
+        background-image: url(/assets/image-hero-tablet.webp);
+        width: 720px;
+        height: 720px;
+        left: 380px;
+        top: -92.13px;
+    }
+}
+
+  .hero {
+    width: 990px;
+    height: 960px;
+
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+        width: 640.71px;
+        height: 640px;
+    }
+  }
 
 
   .container {
-    margin: 0 auto;
+    margin: 30px auto;
 
     width: 1110px;
-    height: 1800px;
+    height: 1440px;
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(3, 1fr) 200px ;
     grid-template-rows: 100px 600px 800px 100px ;
   
-  
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 100px 500px 800px 100px ;
+    }
+
     & > * {
-    // background-color: orange;
     font-size: 30px;
     font-weight: 700;
     color: orangered;
   }
 }
+
   .header {
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
 
+    
     & .logo {
         width: 112px;
         height: 28px;
         margin-top: 39px;
+
+        @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+            width: 89px;
+            height: 35px;
+            margin-top: 0;
+        }
     }
 
     & .btn--get-started:visited,
@@ -77,7 +127,6 @@ body {
         width: 167px;
         height: 56px;
 
-
         background-color: var(--color-primary-dark-blue) ;
         border-radius: 100px;
         text-decoration: none;
@@ -85,6 +134,16 @@ body {
         font-size: 18px;
         color: #FFF;
         transition: all .2s;
+
+
+        @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+            width: 140px;
+            height: 48px;
+            font-size: 16px;
+            
+            top: 24px;
+            left: 588px;
+        }
     } 
 
     & .btn--get-started:hover { 
@@ -96,12 +155,22 @@ body {
     grid-column: 1 / 3;
     margin-top: 166px;
 
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+        transform: translateY(-145px);
+    }
+
     &__title {
        width: 457px;
        height: 143px;
        margin-bottom: 20px;
        font-size: 56px;
        color: var(--color-primary-dark-blue);
+
+       @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+        width: 326px;
+        height: 101px;
+        font-size: 40px;
+    }
     }
 
     &__details {
@@ -111,6 +180,14 @@ body {
         font-size: 18px;
         font-weight: 500;
         color: var(--color-primary-grey-2);
+
+        @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+            width: 398px;
+            height: 78px;
+            font-size: 16px;
+            line-height: 26px;
+            margin-bottom: 24px;
+        }
         
     }
 
@@ -130,6 +207,10 @@ body {
         font-size: 18px;
         color: #FFF;
         transition: all .2s;
+
+        @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+            height: 56px;
+        }
     }
 
     &__button:hover {
@@ -139,19 +220,6 @@ body {
 
   }
 
-  .hero-section {
-    z-index: -1;
-    width: 990px;
-    height: 960px;
-    position: absolute;
-    top: -170px;
-    left: 769px;
-  }
-
-  .hero {
-    width: 990px;
-    height: 960px;
-  }
 
   .specifications {
 
@@ -165,9 +233,25 @@ body {
     grid-row-gap: 60px;
     grid-column-gap: 30px;
     
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+        margin-top: 20px;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 340px);
+        grid-row-gap: 60px;
+        grid-column-gap: 10px;
+    }
+
+
+    & > * {
+        @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+            width: 339px;
+            height: 259px;
+        }
+    }
+    
         &__highlights {
         background: linear-gradient( rgb(255,111,72), rgb(240,42,166));
-        border-radius: 25px;
+        border-radius: 10px;
         grid-area: 1, 1 / 2, 2;
 
         &--text {
@@ -177,21 +261,32 @@ body {
             color: #FFF;
             margin-left: 32px;
             margin-top: 64px;
+
+            @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                font-size: 24px;
+                width: 286px;
+                height: 64px;
+            }
         }
-        }
+    }
         
         &__animation {
-            grid-area: 1, 2 / 2, 3;
+            grid-area: 1, 2 / 2, -1;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            border-radius: 25px;
             padding: 64px 32px 40px 32px ;
             box-shadow:  0px 25px 50px 0px rgba(6,22,141,.042);
+
 
             &--title {
                 font-size: 24px;
                 color: var(--color-primary-dark-blue);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    font-size: 20px;
+                    margin-top: 24px;
+                }
             }
 
             &--text {
@@ -199,6 +294,11 @@ body {
                 font-weight: 200;
                 color: var(--color-primary-grey-2);
                 line-height: 28px;
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    font-size: 16px;
+                    margin-top: 16px;
+                }
             }
 
             &--link:link,
@@ -206,6 +306,10 @@ body {
                 text-decoration: none;
                 color: var(--color-primary-pink-1);
                 font-size: 18px;
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    margin-top: 24px;
+                }
             }
 
             &::before {
@@ -228,10 +332,22 @@ body {
             padding: 64px 32px 40px 32px ;
             box-shadow:  0px 25px 50px 0px rgba(6,22,141,.042);
 
+                      // For tablet
+            @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                font-size: 20px;
+                margin-top: 24px;
+            }
+
             &--title {
                 margin-top: -25px;
                 font-size: 24px;
                 color: var(--color-primary-dark-blue);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                    font-size: 20px;
+                    margin-top: 24px;
+                }
+                
             }
 
             &--text {
@@ -240,6 +356,12 @@ body {
                 font-weight: 200;
                 color: var(--color-primary-grey-2);
                 line-height: 28px;
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translate(0);
+                    font-size: 16px;
+                    margin-top: 16px;
+                }
             }
 
             &--link:link,
@@ -248,11 +370,16 @@ body {
                 color: var(--color-primary-pink-1);
                 font-size: 18px;
                 transform: translateY(-18px);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translateY(0);
+                    margin-top: 24px;
+                }
             }
 
             &::before {
                 content: "";
-                margin-top: -90px;
+                margin-top: -95px;
                 width: 56px;
                 height: 56px;
                 border: 50%;
@@ -267,14 +394,27 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            border-radius: 25px;
             padding: 64px 32px 40px 32px ;
             box-shadow:  0px 25px 50px 0px rgba(6,22,141,.042);
+
+              // For tablet
+            @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {             
+                font-size: 20px;
+                margin-top: 24px;
+                grid-row: 2 / 3;
+                grid-column: 2 / -1;
+            }
 
             &--title {
                 margin-top: -25px;
                 font-size: 24px;
                 color: var(--color-primary-dark-blue);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                    margin-top: 0;
+                    font-size: 20px;
+                    margin-top: 24px;
+                }
             }
 
             &--text {
@@ -283,6 +423,12 @@ body {
                 font-weight: 200;
                 color: var(--color-primary-grey-2);
                 line-height: 28px;
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translate(0);
+                    font-size: 16px;
+                    margin-top: 16px;
+                }
             }
 
             &--link:link,
@@ -291,11 +437,16 @@ body {
                 color: var(--color-primary-pink-1);
                 font-size: 18px;
                 transform: translateY(-18px);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translateY(0);
+                    margin-top: 24px;
+                }
             }
 
             &::before {
                 content: "";
-                margin-top: -90px;
+                margin-top: -95px;
                 width: 56px;
                 height: 56px;
                 border: 50%;
@@ -314,10 +465,25 @@ body {
             padding: 64px 32px 40px 32px ;
             box-shadow:  0px 25px 50px 0px rgba(6,22,141,.042);
 
+
+            // For tablet
+            @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                font-size: 20px;
+                margin-top: 24px;
+                grid-row: 3 / 4;
+                grid-column: 1 / 2;
+            }
+
             &--title {
                 margin-top: -25px;
                 font-size: 24px;
                 color: var(--color-primary-dark-blue);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                    margin-top: 0;
+                    font-size: 20px;
+                    margin-top: 24px;
+                }
             }
 
             &--text {
@@ -326,6 +492,12 @@ body {
                 font-weight: 200;
                 color: var(--color-primary-grey-2);
                 line-height: 28px;
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translate(0);
+                    font-size: 16px;
+                    margin-top: 16px;
+                }
             }
 
             &--link:link,
@@ -334,11 +506,16 @@ body {
                 color: var(--color-primary-pink-1);
                 font-size: 18px;
                 transform: translateY(-18px);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translateY(0);
+                    margin-top: 24px;
+                }
             }
 
             &::before {
                 content: "";
-                margin-top: -90px;
+                margin-top: -95px;
                 width: 56px;
                 height: 56px;
                 border: 50%;
@@ -357,10 +534,23 @@ body {
             padding: 64px 32px 40px 32px ;
             box-shadow:  0px 25px 50px 0px rgba(6,22,141,.042);
 
+            @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                font-size: 20px;
+                margin-top: 24px;
+                grid-row: 3 / 4;
+                grid-column: 2 / -1;
+            }
+
             &--title {
                 margin-top: -25px;
                 font-size: 24px;
                 color: var(--color-primary-dark-blue);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop) {        
+                    margin-top: 0;
+                    font-size: 20px;
+                    margin-top: 24px;
+                }
             }
 
             &--text {
@@ -369,6 +559,12 @@ body {
                 font-weight: 200;
                 color: var(--color-primary-grey-2);
                 line-height: 28px;
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translate(0);
+                    font-size: 16px;
+                    margin-top: 16px;
+                }
             }
 
             &--link:link,
@@ -377,11 +573,16 @@ body {
                 color: var(--color-primary-pink-1);
                 font-size: 18px;
                 transform: translateY(-18px);
+
+                @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+                    transform: translateY(0);
+                    margin-top: 24px;
+                }
             }
 
             &::before {
                 content: "";
-                margin-top: -90px;
+                margin-top: -95px;
                 width: 56px;
                 height: 56px;
                 border: 50%;
@@ -400,6 +601,13 @@ body {
     background-color: #13183F;
 
 
+    @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+        width: 768px;
+        margin-top: 250px;
+        justify-content: flex-between;
+    }
+
+
     & .btn--get-started:visited,
     & .btn--get-started:link {
         display: flex;
@@ -415,6 +623,13 @@ body {
         font-family: "Plus Jakarta Sans", sans-serif;
         font-size: 18px;
         color: #FFF;
+
+
+        @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+            width: 140px;
+            height: 48px;
+            margin: 36px 39px 36px 0;
+        }
     }
 
     & .btn--get-started:hover {
@@ -422,10 +637,15 @@ body {
     }
 
     & img {
-       display: block;
        width: 112px;
        height: 28px; 
        margin: 47px 0 46px 166px;
+
+       @media (min-width : $bp-tablet) and (max-width : $bp-desktop  ) {        
+        width: 89px;
+        height: 35px; 
+        margin: 43px 0 42px 40px;
+    }
     }
   }
   
